# wikirss

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml
src/wikirss/: config.py  scrape.py
